2025-11-24T01:08:20Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19620286684 # 1324
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-24
* notice: last 14d: unq all: 11 29
* notice: prev accum: outdated-unq outdated-all / unq all: 1083 3140 / 1097 3171
* notice: next accum: outdated-unq outdated-all / unq all: 1085 3142 / 1097 3171
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-11-09] / []

2025-11-23T12:23:07Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19611088549 # 1323
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-23
* notice: last 14d: unq all: 13 31
* notice: prev accum: outdated-unq outdated-all / unq all: 1083 3140 / 1096 3170
* notice: next accum: outdated-unq outdated-all / unq all: 1083 3140 / 1097 3171
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-11-23]

2025-11-22T12:23:16Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19595402163 # 1321
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-22
* notice: last 14d: unq all: 12 30
* notice: prev accum: outdated-unq outdated-all / unq all: 1083 3140 / 1095 3169
* notice: next accum: outdated-unq outdated-all / unq all: 1083 3140 / 1096 3170
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-11-22]

2025-11-21T12:26:51Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19570466650 # 1319