@@ -1,6 +1,6 @@
 {
-  "count": 29,
-  "uniques": 11,
+  "count": 30,
+  "uniques": 12,
   "views": [
     {
       "timestamp": "2025-11-13T00:00:00Z",
@@ -44,6 +44,11 @@
     },
     {
       "timestamp": "2025-11-23T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-11-26T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
