@@ -1,3 +1,12 @@
+2025-11-27T01:03:13Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19721881979 # 1330
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-27
+* notice: last 14d: unq all: 12 30
+* notice: prev accum: outdated-unq outdated-all / unq all: 1085 3142 / 1097 3171
+* notice: next accum: outdated-unq outdated-all / unq all: 1085 3142 / 1098 3172
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-11-26]
+
 2025-11-24T01:08:20Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19620286684 # 1324
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-24
